# wifi_localization

./: package.xml
amcl/: CMakeLists.txt  package.xml
amcl/include/amcl/pf/: pf.h
amcl/launch/: amcl.launch  amcl_rosbag.launch
amcl/src/: amcl_node.cpp
amcl/src/amcl/pf/: pf.c
include/: csv_data_loader.h
include/wifi_data_collector/: mapdata.h  subscriber.h
include/wifi_position_estimation/: wifi_position_estimation.h
include/wifi_position_estimation/gaussian_process/: gaussian_process.h
launch/: kidnapped_robot_experiment.launch  wifi_data_collector.launch  wifi_gps_data_collector.launch  wifi_publisher_estimation.launch  wifi_publisher_recording.launch
msg/: WifiState.msg
scripts/: wifi.py  wifi_map_builder.py
src/: csv_data_loader.cpp
src/wifi_data_collector/: mapdata.cpp  subscriber.cpp
src/wifi_position_estimation/gaussian_process/: gaussian_process.cpp
src/wifi_publisher/: wifi_publisher_node.cpp
srv/: PlotGP.srv
wifi_localization/: CMakeLists.txt  package.xml
wifi_localization/include/: csv_data_loader.h  mapcollection.h  mapdata.h  subscriber.h
wifi_localization/include/gaussian_process/: gaussian_process.h  kernel.h
wifi_localization/include/wifi_data_collector/: mapcollection.h  mapdata.h  subscriber.h
wifi_localization/include/wifi_position_estimation/: precomputedDataPoint.h  wifi_position_estimation.h
wifi_localization/include/wifi_position_estimation/gaussian_process/: ard_se_kernel.h  gaussian_process.h  kernel.h  optimizer.h
wifi_localization/include/wifi_publisher/: wifi_publisher.h  wifi_scan.h  wifipublisher.h
wifi_localization/launch/: kidnapped_robot_experiment.launch  map_traverser.launch  map_traverser_angle.launch  map_traverser_ordered.launch  map_traverser_ordered_angle.launch  periodic_wifi_position_estimation.launch  pos-est-accuracy-experiment.launch  wifi_data_collector.launch  wifi_data_collector_csv.launch  wifi_data_collector_input.launch  wifi_data_collector_record_only_stopped.launch  wifi_data_visualizer.launch  wifi_gps_data_collector.launch  wifi_localization.launch  wifi_position_estimation.launch  wifi_publisher.launch  wifi_publisher_estimation.launch  wifi_publisher_full_scan.launch  wifi_publisher_recording.launch
wifi_localization/msg/: MaxWeight.msg  WifiPositionEstimation.msg  WifiState.msg
wifi_localization/scripts/: wifi.py  wifi_publisher.py
wifi_localization/src/: csv_data_loader.cpp  map_traverser_node.cpp  mapcollection.cpp  mapdata.cpp  subscriber.cpp  wifi_data_collector_node.cpp  wifi_localization_node.cpp
wifi_localization/src/experiments/: map_traverser_node.cpp  wifi_pos_est_accuracy2_node.cpp  wifi_pos_est_accuracy_node.cpp  wifi_pos_est_kidnapping_node.cpp
wifi_localization/src/gaussian_process/: gaussian_process.cpp  kernel.cpp  optimizer.cpp
wifi_localization/src/wifi_data_collector/: mapcollection.cpp  mapdata.cpp  subscriber.cpp  wifi_data_collector_node.cpp
wifi_localization/src/wifi_position_estimation/: wifi_position_estimation.cpp  wifi_position_estimation_node.cpp
wifi_localization/src/wifi_position_estimation/gaussian_process/: ard_se_kernel.cpp  gaussian_process.cpp  kernel.cpp  optimizer.cpp
wifi_localization/src/wifi_publisher/: wifi_publisher.cpp  wifi_publisher_node.cpp  wifi_scan.c  wifipublisher.cpp
