<?xml version="1.0"?>
<package>
  <name>wifi_localization</name>
  <version>0.0.1</version>
  <description>
    Build a wifi map for coarse positioning in large scale environments with similar physical layout
  </description>
  <maintainer email="einig@informatik.uni-hamburg.de">Lasse Einig</maintainer>
  <license>BSD</license>
  <author email="einig@informatik.uni-hamburg.de">Lasse Einig</author>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
</package>
